# mcpelauncher-linux

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FindEGL.cmake  LICENSE  README.md  archpkgs.txt  download_icon.sh  extract.sh  gamepad.conf  install.sh  makedeb.sh  mcpe.desktop  mcpelauncher.desktop  setup_bin_libs.sh  setup_cef.sh  setup_protobuf.sh  start_install.sh  start_install_ubuntu.sh  start_mcpelauncher.sh
eglut/: eglut.c  eglut.h  eglut_wayland.c  eglut_x11.c  eglut_x11.h  eglutint.h
hybris/include/hybris/: binding.h  dlfcn.h
hybris/src/: cache.c  ctype.h  dlfcn.c  hooks.c
hybris/src/jb/: linker.c
libs/AMD/mod_stub_lib/jni/: main.c
libs/AMD/native/: libfmod.so.8.2
libs/eglut/: eglut.c  eglut.h  eglutint.h
libs/elf/: elf.h
libs/empty/jni/: Android.mk
libs/epoll/: CMakeLists.txt  NOTICE
libs/epoll/include/sys/: epoll.h  signalfd.h  timerfd.h
libs/epoll/src/: CMakeLists.txt  common.c  epoll.c  signalfd.c  timerfd.c
libs/hybris/include/hybris/: dlfcn.h  hook.h
libs/hybris/src/: cache.c  ctype.c  dlfcn.c  hooks.c  hooks_darwin.c  hooks_darwin_pthread_once.cpp  hooks_darwin_pthread_once.h  hooks_dirent.c  hooks_io.c  hooks_net.c  hooks_net.h  hooks_net_darwin.c  hooks_pthread.c  hooks_shm.c  properties.c
libs/hybris/src/hack/: hooks.cpp  hooks.h
libs/hybris/src/jb/: dlfcn.c  linker.c  linker.h
libs/mod_stub_lib/jni/: Android.mk  Application.mk  main.c
libs/native/: libfmod.so.7.2  libfmod.so.7.7
libs/rapidxml/: rapidxml_print.hpp
mcpe/: App.h  AppPlatform.h  FilePickerSettings.h  ImageData.h  ImagePickingCallback.h  Keyboard.h  MinecraftClient.h  MinecraftGame.h  Mouse.h  Xbox.h  gl.h  types.cpp
mod_example/: README.md
mod_example/jni/: Android.mk  Application.mk  main.cpp  mcpelauncher_api.h
src/: LinuxAppPlatform.cpp  LinuxAppPlatform.h  LinuxStore.h  android_symbols.h  async_result_util.h  base64.cpp  base64.h  browser.cpp  browser.h  cll.cpp  cll.h  common.cpp  common.h  dedi.cpp  egl_symbols.h  extract.cpp  extract.h  fmod_symbols.h  gamepad.cpp  gamepad.h  gamepad_mapper_browser.cpp  gamepad_mapper_browser.h  gles_symbols.h  google_login_browser.cpp  google_login_browser.h  google_play_helper.cpp  google_play_helper.h  hook.cpp  initial_setup_browser.cpp  initial_setup_browser.h  joystick.cc  joystick.hh  linux_appplatform.cpp  linux_appplatform.h  linux_store.h  log.h  main.cpp  msa.cpp  msa.h  msa_network.cpp  (+12 more)
src/client/: amdfix.s  appplatform.cpp  appplatform.h  fake_jni.cpp  fake_jni.h  gamepad.cpp  gamepad.h  gamepad_mapper_browser.cpp  gamepad_mapper_browser.h  google_login_browser.cpp  google_login_browser.h  google_play_helper.cpp  google_play_helper.h  initial_setup_browser.cpp  initial_setup_browser.h  main.cpp  store.h  window.h  window_eglut.cpp  window_eglut.h  window_glfw.cpp  window_glfw.h  xboxlive.cpp  xboxlive.h
src/client/initial_setup_resources/gamepad_mapper/: index.html
src/common/: browser.cpp  browser.h  cll.cpp  cll.h  common.cpp  common.h  extract.cpp  extract.h  hook.cpp  hook.h  log.cpp  modloader.cpp  modloader.h  openssl_multithread.cpp  openssl_multithread.h  path_helper.cpp  path_helper.h
src/common/symbols/: libm_symbols.h
src/initial_setup_resources/: circular_progress.js  index.html  style.css
src/initial_setup_resources/gamepad-mapper/: index.html
src/minecraft/: Api.h  App.h  AppPlatform.h  AppResourceLoader.h  AutomationClient.h  CommandOutput.h  CommandOutputSender.h  Common.h  DedicatedServerCommandOrigin.h  ExternalFileLevelStorageSource.h  FilePathManager.h  FilePickerSettings.h  GameControllerManager.h  I18n.h  IMinecraftApp.h  ImagePickingCallback.h  Keyboard.h  LevelSettings.h  Minecraft.h  MinecraftCommands.h  MinecraftEventing.h  MinecraftGame.h  Mouse.h  MultiplayerService.h  OpsList.h  Options.h  Resource.h  ResourcePack.h  ResourcePackStack.h  SaveTransactionManager.h  Scheduler.h  ServerInstance.h  UUID.h  UserManager.h  Whitelist.h  Xbox.h  gl.h  string.cpp  string.h  string_linux.h  (+3 more)
src/minecraft/std/: function.h  function_darwin.h  string_darwin.cpp  string_darwin.h
src/msa/: msa.h  msa_network.cpp
src/server/: server.cpp  server_minecraft_app.h  server_properties.cpp  server_properties.h  stub_key_provider.cpp  stub_key_provider.h
src/symbols/: fmod_symbols.h
src/ui/browser/: browser.cpp  gamepad_mapper_browser.cpp  gamepad_mapper_browser.h  google_login_browser.cpp  google_login_browser.h  google_play_helper.cpp  initial_setup_browser.cpp  initial_setup_browser.h  xbox_login_browser.cpp  xbox_login_browser.h
src/ui/browser/resources/initial_setup/: index.html  style.css
src/ui/file_picker/: file_picker.h  file_picker_factory.cpp  file_picker_factory.h  file_picker_zenity.cpp  file_picker_zenity.h
src/ui/game_window/: window.h  window_eglut.cpp  window_glfw.h
src/xbox/: msa_network.cpp  xbox_login_browser.cpp  xbox_login_browser.h  xboxlive.cpp  xboxlive.h
tools/: process_headers.py
tools/cppheaderparser/: CppHeaderParser.py
